--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="text">#000000</color>
     <color name="divider">#BDBDBD</color>
 
+    <color name="white">#FFFFFF</color>
+
 
 </resources>
